# COM-Port-Monitor

./: .gitignore  LICENSE  README.md  commonitor.py  commonitor.spec  pyproject.toml  requirements.txt
commonitor/: __init__.py  commonitor.py
src/: commonitor.py
